[package]
name = "ggj-2024"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = [
    "staticlib", # for hardware
    "dylib",     # for simulator
    "rlib",      # to link with bin
]

[dependencies]
playdate = "*"
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
playdate-controls = "*"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Playdate Package Info
# doc: https://github.com/boozook/playdate/blob/main/support/build/README.md#metadata
# official doc: https://sdk.play.date/#pdxinfo
[package.metadata.playdate]
name = "Train to Ciampino"
author = "Giorgio Pomettini"
version = "0.1.0"
bundle-id = "com.pomettini.ggj2024"
description = "Drive a train to Ciampino"
image-path = "img/system"

# Assets Rules
# doc: https://github.com/boozook/playdate/blob/main/support/build/README.md#assets
[package.metadata.playdate.assets]
"img/system/" = "assets/launcher/card.png"

# Assets Configuration
[package.metadata.playdate.options.assets]
dependencies = true    # allow to build assets for dependencies (default is `true`)
overwrite = true       # overwrite existing (default is `true`)
method = "link"        # "copy" or "link"   (default is `link`)
follow-symlinks = true # follow symlinks    (default is `true`)

[profile.dev]
panic = "abort"
opt-level = 3
lto = true

[profile.release]
panic = "abort"
opt-level = 3
lto = true
