[package]
name = "ggj-2024"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = [
    "staticlib", # for hardware
    "dylib",     # for simulator
    "rlib",      # to link with bin
]

[features]
draw-fps = []

[dependencies]
playdate = "0.2.5"
crankit-game-loop = { git = "https://github.com/pomettini/crankit-game-loop.git" }
rand = { version = "0.9.0", features = ["small_rng"], default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Playdate Package Info
# doc: https://github.com/boozook/playdate/blob/main/support/build/README.md#metadata
# official doc: https://sdk.play.date/#pdxinfo
[package.metadata.playdate]
name = "Train to Ciampino"
author = "Giorgio Pomettini"
version = "0.1.0"
bundle-id = "com.pomettini.ggj2024"
description = "Drive a train to Ciampino"
image-path = "img/system"
build-number = 1

# Assets Rules
# doc: https://github.com/boozook/playdate/blob/main/support/build/README.md#assets
[package.metadata.playdate.assets]
"img/system/" = "assets/launcher/card.png"

# Assets Configuration
[package.metadata.playdate.options.assets]
dependencies = true    # allow to build assets for dependencies (default is `true`)
overwrite = true       # overwrite existing (default is `true`)
method = "link"        # "copy" or "link"   (default is `link`)
follow-symlinks = true # follow symlinks    (default is `true`)

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"         # optimize for binary size (or use `3`, play with it)
overflow-checks = false # runtime integer overflow checks. (optionally, as you wish)
lto = "fat"
incremental = false
codegen-units = 1

debug = 0
strip = "symbols"        # or debuginfo
debug-assertions = false

[lints.clippy]
pedantic = "warn"
